<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="16dp"
            tools:context=".pasien.PasienTambah">

            <LinearLayout
                android:id="@+id/container_registrasi"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <!-- Label -->
                <TextView
                    style="@style/CategoryStyle"
                    android:text="@string/category_registrasi" />

                <!-- Input fields -->
                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:paddingLeft="4dp">

                    <!-- Weight field -->
                    <EditText
                        android:id="@+id/edit_pasien_no_registrasi"
                        style="@style/EditorFieldStyle"
                        android:hint="@string/hint_registrasi"
                        android:inputType="textCapWords" />
                </RelativeLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/container_rm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <!-- Label -->
                <TextView
                    style="@style/CategoryStyle"
                    android:text="@string/category_no_rm" />

                <!-- Input fields -->
                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:paddingLeft="4dp">

                    <!-- Weight field -->
                    <EditText
                        android:id="@+id/edit_pasien_no_rm"
                        style="@style/EditorFieldStyle"
                        android:hint="@string/hint_no_rm"
                        android:inputType="textCapWords" />
                </RelativeLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/container_pemilik"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <!-- Label -->
                <TextView
                    style="@style/CategoryStyle"
                    android:text="@string/category_pemilik" />

                <!-- Input fields -->
                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:paddingLeft="4dp">

                    <!-- Weight field -->
                    <EditText
                        android:id="@+id/edit_pasien_nama_pemilik"
                        style="@style/EditorFieldStyle"
                        android:hint="@string/hint_nama_pemilik"
                        android:inputType="textCapWords" />
                </RelativeLayout>
            </LinearLayout>

            <!-- Overview category -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <!-- Label -->
                <TextView
                    style="@style/CategoryStyle"
                    android:text="@string/category_overview" />

                <!-- Input fields -->
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:orientation="vertical"
                    android:paddingLeft="4dp">

                    <!-- Name field -->
                    <EditText
                        android:id="@+id/edit_pasien_nama_hewan"
                        style="@style/EditorFieldStyle"
                        android:hint="@string/hint_patient_name"
                        android:inputType="textCapWords" />

                    <Spinner
                        android:id="@+id/spinner_jenis_hewan"
                        android:layout_height="48dp"
                        android:layout_width="wrap_content"
                        android:paddingRight="16dp"
                        android:spinnerMode="dropdown"/>
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/container_ttl"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <!-- Label -->
                <TextView
                    style="@style/CategoryStyle"
                    android:text="@string/category_ttl" />

                <!-- Input fields -->
                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:paddingLeft="4dp">

                    <!-- Weight field -->
                    <EditText
                        android:id="@+id/edit_pasien_ttl"
                        style="@style/EditorFieldStyle"
                        android:hint="@string/hint_ttl"
                        android:inputType="date" />
                </RelativeLayout>
            </LinearLayout>

            <!-- Gender category -->
            <LinearLayout
                android:id="@+id/container_gender"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <!-- Label -->
                <TextView
                    style="@style/CategoryStyle"
                    android:text="@string/category_gender" />

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:paddingLeft="4dp">

                    <!--<EditText
                        android:id="@+id/edit_pasien_gender"
                        style="@style/EditorFieldStyle"
                        android:hint="@string/hint_gender"
                        android:inputType="textCapWords" />-->

                    <RadioGroup
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingRight="16dp"
                        android:layout_centerVertical="true"
                        android:id="@+id/radio_sex_group">

                        <RadioButton
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Jantan"
                            android:textAppearance="?android:textAppearanceMedium"
                            android:fontFamily="sans-serif-light"
                            android:id="@+id/radio_jantan"/>

                        <RadioButton
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Betina"
                            android:textAppearance="?android:textAppearanceMedium"
                            android:fontFamily="sans-serif-light"
                            android:id="@+id/radio_betina"/>

                    </RadioGroup>

                </RelativeLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/container_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <!-- Label -->
                <TextView
                    style="@style/CategoryStyle"
                    android:text="@string/category_username" />

                <!-- Input fields -->
                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:paddingLeft="4dp">

                    <!-- Weight field -->
                    <EditText
                        android:id="@+id/edit_pasien_username"
                        style="@style/EditorFieldStyle"
                        android:hint="@string/hint_username"
                        android:inputType="textCapWords" />
                </RelativeLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/container_status_antrian"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <!-- Label -->
                <TextView
                    style="@style/CategoryStyle"
                    android:text="@string/category_status_antrian" />

                <!-- Input fields -->
                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:paddingLeft="4dp">

                    <!-- Weight field -->
                    <EditText
                        android:id="@+id/edit_pasien_status_antrian"
                        style="@style/EditorFieldStyle"
                        android:hint="@string/hint_status_antrian"
                        android:inputType="textCapWords" />
                </RelativeLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>